# os-check

./: .gitignore  CMakeLists.txt  Check-OS.pro  HowISeeIt  README.md  TODO  linuxcommand.cpp  linuxcommand.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
